--- a/src/components/common/button/Button.css
+++ b/src/components/common/button/Button.css
@@ -1,19 +1,19 @@
 .ui.button.button-primary {
-    background-color: #003049;
+    background-color: #005685;
     color: #fff;
 }
 
 .ui.button.button-primary:hover {
-    background-color: #004970;
+    background-color: #0076b6;
     color: #fff;
 }
 
 .ui.button.button-primary::selection {
-    background-color: #004970;
+    background-color: #0076b6;
     color: #fff;
 }
 
 .ui.button.button-primary:focus:not(:active) {
-    background-color: #004970;
+    background-color: #0076b6;
     color: #fff;
 }
